UWM-BASE: Adjust styling to fix header over scrollbar issue in sharepoint pages that are getting moved to lp pages

--- a/docroot/lp/breakthroughs/css/corev15.css
+++ b/docroot/lp/breakthroughs/css/corev15.css
@@ -26,7 +26,6 @@ line-height:normal;
 body
 {
 margin:0px;
-overflow:hidden;
 /* [ReplaceColor(themeColor:"PageBackground")] */ background-color:#fff;
 background-size:cover;
 background-repeat:no-repeat;
@@ -45,7 +44,6 @@ position:relative;
 }
 #s4-workspace
 {
-overflow:auto;
 position:relative;
 }
 #s4-bodyContainer
